// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabBar accepts and passes through additional props with ScrollableTabView 1`] = `
<View
  testID="scrollable-tab-view"
>
  <View
    style={
      [
        {
          "borderColor": "#ccc",
          "borderLeftWidth": 0,
          "borderRightWidth": 0,
          "borderTopWidth": 0,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 50,
          "justifyContent": "space-around",
        },
        {
          "backgroundColor": "blue",
          "paddingHorizontal": 0,
        },
        [
          {
            "borderBottomColor": "#b7bbc866",
            "borderBottomWidth": 1,
            "borderColor": "#ffffff",
          },
          undefined,
        ],
      ]
    }
  >
    <TouchableOpacity
      accessibilityLabel="Tab 1"
      accessibilityTraits="button"
      accessible={true}
      onPress={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "paddingBottom": 10,
            },
            {
              "paddingBottom": 8,
              "paddingHorizontal": 32,
              "paddingVertical": 8,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "white",
                "fontWeight": "bold",
              },
              {
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 24,
              },
            ]
          }
        >
          Tab 1
        </Text>
      </View>
    </TouchableOpacity>
    <TouchableOpacity
      accessibilityLabel="Tab 2"
      accessibilityTraits="button"
      accessible={true}
      onPress={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "paddingBottom": 10,
            },
            {
              "paddingBottom": 8,
              "paddingHorizontal": 32,
              "paddingVertical": 8,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "gray",
                "fontWeight": "normal",
              },
              {
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 24,
              },
            ]
          }
        >
          Tab 2
        </Text>
      </View>
    </TouchableOpacity>
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#121314",
          "bottom": 0,
          "height": 2,
          "position": "absolute",
          "transform": [
            {
              "translateX": 0,
            },
          ],
          "width": 150,
        }
      }
    />
  </View>
  <View
    tabLabel="Tab 1"
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Tab 1
       Content
    </Text>
  </View>
  <View
    tabLabel="Tab 2"
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Tab 2
       Content
    </Text>
  </View>
</View>
`;

exports[`TabBar renders correctly with ScrollableTabView 1`] = `
<View
  testID="scrollable-tab-view"
>
  <View
    style={
      [
        {
          "borderColor": "#ccc",
          "borderLeftWidth": 0,
          "borderRightWidth": 0,
          "borderTopWidth": 0,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 50,
          "justifyContent": "space-around",
        },
        {
          "backgroundColor": "#ffffff",
          "paddingHorizontal": 0,
        },
        [
          {
            "borderBottomColor": "#b7bbc866",
            "borderBottomWidth": 1,
            "borderColor": "#ffffff",
          },
          undefined,
        ],
      ]
    }
  >
    <TouchableOpacity
      accessibilityLabel="Tab 1"
      accessibilityTraits="button"
      accessible={true}
      onPress={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "paddingBottom": 10,
            },
            {
              "paddingBottom": 8,
              "paddingHorizontal": 32,
              "paddingVertical": 8,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#121314",
                "fontWeight": "bold",
              },
              {
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 24,
              },
            ]
          }
        >
          Tab 1
        </Text>
      </View>
    </TouchableOpacity>
    <TouchableOpacity
      accessibilityLabel="Tab 2"
      accessibilityTraits="button"
      accessible={true}
      onPress={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "paddingBottom": 10,
            },
            {
              "paddingBottom": 8,
              "paddingHorizontal": 32,
              "paddingVertical": 8,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#686e7d",
                "fontWeight": "normal",
              },
              {
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 24,
              },
            ]
          }
        >
          Tab 2
        </Text>
      </View>
    </TouchableOpacity>
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#121314",
          "bottom": 0,
          "height": 2,
          "position": "absolute",
          "transform": [
            {
              "translateX": 0,
            },
          ],
          "width": 150,
        }
      }
    />
  </View>
  <View
    tabLabel="Tab 1"
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Tab 1
       Content
    </Text>
  </View>
  <View
    tabLabel="Tab 2"
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Tab 2
       Content
    </Text>
  </View>
</View>
`;

exports[`TabBar renders correctly with custom style using ScrollableTabView 1`] = `
<View
  testID="scrollable-tab-view"
>
  <View
    style={
      [
        {
          "borderColor": "#ccc",
          "borderLeftWidth": 0,
          "borderRightWidth": 0,
          "borderTopWidth": 0,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 50,
          "justifyContent": "space-around",
        },
        {
          "backgroundColor": "#ffffff",
          "paddingHorizontal": 0,
        },
        [
          {
            "borderBottomColor": "#b7bbc866",
            "borderBottomWidth": 1,
            "borderColor": "#ffffff",
          },
          {
            "backgroundColor": "red",
          },
        ],
      ]
    }
  >
    <TouchableOpacity
      accessibilityLabel="Tab 1"
      accessibilityTraits="button"
      accessible={true}
      onPress={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "paddingBottom": 10,
            },
            {
              "paddingBottom": 8,
              "paddingHorizontal": 32,
              "paddingVertical": 8,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#121314",
                "fontWeight": "bold",
              },
              {
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 24,
              },
            ]
          }
        >
          Tab 1
        </Text>
      </View>
    </TouchableOpacity>
    <TouchableOpacity
      accessibilityLabel="Tab 2"
      accessibilityTraits="button"
      accessible={true}
      onPress={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "paddingBottom": 10,
            },
            {
              "paddingBottom": 8,
              "paddingHorizontal": 32,
              "paddingVertical": 8,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#686e7d",
                "fontWeight": "normal",
              },
              {
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 24,
              },
            ]
          }
        >
          Tab 2
        </Text>
      </View>
    </TouchableOpacity>
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "#121314",
          "bottom": 0,
          "height": 2,
          "position": "absolute",
          "transform": [
            {
              "translateX": 0,
            },
          ],
          "width": 150,
        }
      }
    />
  </View>
  <View
    tabLabel="Tab 1"
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Tab 1
       Content
    </Text>
  </View>
  <View
    tabLabel="Tab 2"
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Tab 2
       Content
    </Text>
  </View>
</View>
`;
